
# CMakeLists.txt for Magritte's source
######################################

# Point to the include directory
include_directories (../include)

# Create Magritte library
add_library (Magritte
  input.cpp)
#  model.cpp
#  cells.cpp
#  rays.cpp
#  species.cpp
#  frequencies.cpp
#  temperature.cpp
#  heapsort.cpp)
